--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Silver Figurine</title>
+    <title>3D Silver Robot</title>
     <style>
         * {
             margin: 0;
@@ -42,8 +42,8 @@
 </head>
 <body>
     <div id="info">
-        <h2>3D Silver Figurine</h2>
-        <p>Move your cursor to interact</p>
+        <h2>3D Silver Robot</h2>
+        <p>Move your cursor - the robot will follow!</p>
     </div>
     <div id="canvas-container"></div>
     
