Redesign as white low-poly robot with flat hexagonal/triangular surfaces and fix head tracking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Silver Robot</title>
+    <title>3D Low-Poly White Robot</title>
     <style>
         * {
             margin: 0;
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div id="info">
-        <h2>3D Silver Robot</h2>
+        <h2>3D Low-Poly White Robot</h2>
         <p>Move your cursor - the robot will follow!</p>
     </div>
     <div id="canvas-container"></div>
